Fix a crash when the config contains invalid account ID for setting avatar.

Reviewed-by: David Edmundson
BUG: 271882